--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
-p{
-    flex-direction: column;
+@media screen and (max-width: 767px){
+    p{
+        display: flex;
+        justify-content: center;
+        font-size: 24px;
+        color: white;
+        border: 1px solid;
+        justify-content: space-between;
+        align-items: center;
+        background-color: none;
+        border-radius: 20px;
+        padding: 10px;
+    }
 }
